--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/horizon": "^3.2",
-        "laravel/passport": "^7.3",
+        "laravel/socialite": "^4.1",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "rap2hpoutre/laravel-log-viewer": "^1.2",
