--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "vue-toasted": "^1.1.27",
-        "vuedraggable": "^2.23.0"
+        "vuedraggable": "^2.23.0",
+        "vuex": "^3.1.1"
     }
 }
