--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "vue-clipboard2": "^0.3.0",
         "vue-toasted": "^1.1.27",
         "vuedraggable": "^2.23.0",
         "vuex": "^3.1.1"
