--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
+    "/css/_bootstrap-rtl.css": "/css/_bootstrap-rtl.css",
     "/css/app.css": "/css/app.css"
 }
