--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^5.8",
         "rap2hpoutre/laravel-log-viewer": "^1.2",
-        "spatie/laravel-medialibrary": "^7.6"
+        "spatie/laravel-medialibrary": "^7.6",
+        "vinkla/hashids": "^6.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
