--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,8 @@
   "license": "MIT",
   "require": {
     "php": "^7.1.3",
+    "ext-json": "*",
+    "andreasindal/laravel-markdown": "3.0.1",
     "baum/baum": "^1.1",
     "fideloper/proxy": "^4.0",
     "laravel/framework": "5.8.*",
@@ -18,8 +20,7 @@
     "laravelcollective/html": "^5.8",
     "rap2hpoutre/laravel-log-viewer": "^1.2",
     "spatie/laravel-medialibrary": "^7.6",
-    "vinkla/hashids": "^6.0",
-    "ext-json": "*"
+    "vinkla/hashids": "^6.0"
   },
   "require-dev": {
     "beyondcode/laravel-dump-server": "^1.0",
