--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "php": "^7.1.3",
     "ext-json": "*",
     "andreasindal/laravel-markdown": "3.0.1",
+    "aws/aws-sdk-php": "^3.110",
     "baum/baum": "^1.1",
     "fideloper/proxy": "^4.0",
     "laravel/framework": "5.8.*",
