--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/_bootstrap-rtl.css": "/css/_bootstrap-rtl.css",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=0d214fc9a72c581f7dea",
+    "/css/_bootstrap-rtl.css": "/css/_bootstrap-rtl.css?id=d95e2af7e20ed2169d18",
+    "/css/app.css": "/css/app.css?id=8f842625919972a2c6db"
 }
