--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     "laravelcollective/html": "^5.8",
     "league/flysystem-aws-s3-v3": "^1.0",
     "rap2hpoutre/laravel-log-viewer": "^1.2",
+    "spatie/laravel-backup": "^6.3",
     "spatie/laravel-medialibrary": "^7.6",
     "vinkla/hashids": "^6.0"
   },
