-fix logo in profile page -fix landing page text and about us

--- a/resources/seeders/settings.json
+++ b/resources/seeders/settings.json
@@ -1,6 +1,6 @@
 {
   "title": "لينكاتي",
-  "subtitle": "الآن ما تحتاجه هو رابط واحد فقط! - انشاء رابط مختصر لحسابك في الشبكات الاجتماعية",
-  "description": "لينكاتي هي منصة عربية تقدم خدمة إنشاء رابط يحتوي على جميع روابطك المهمة لاستخدامه في وصف حسابك في الشبكات الاجتماعية مثل انستجرام او تويتر.",
-  "keywords": "لينكاتي، روابط مختصرة، رابط للانستجرام، لنكات مختصرة، رابط مختصر، لينك سريع، سوشيال ميديا، رابط في البايو"
+  "subtitle": "ما تحتاجه هو رابط واحد!",
+  "description": "لينكاتي منصة عربية مبسطة تسمح لك ببناء صفحة لجمع كافة الروابط الخاصة بك في مكان واحد. يمكنك استخدام هذا الرابط في كل مكان سواء كان وصف حسابك في انستقرام او تويتر او غيرهما.",
+  "keywords": "لينكاتي، روابط مختصرة، رابط للانستجرام، لنكات مختصرة، رابط مختصر، لينك سريع، سوشيال ميديا، رابط في البايو، منصة لنكاتي، الشبكات الاجتماعية"
 }
