--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
     "laravel/socialite": "^4.1",
     "laravel/tinker": "^1.0",
     "laravelcollective/html": "^5.8",
+    "laravelium/sitemap": "^3.1",
     "league/flysystem-aws-s3-v3": "^1.0",
     "rap2hpoutre/laravel-log-viewer": "^1.2",
     "spatie/laravel-backup": "^6.3",
