--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "laravelium/sitemap": "^3.1",
     "league/flysystem-aws-s3-v3": "^1.0",
     "rap2hpoutre/laravel-log-viewer": "^1.2",
+    "sentry/sentry-laravel": "1.1.1",
     "spatie/laravel-backup": "^6.3",
     "spatie/laravel-medialibrary": "^7.6",
     "vinkla/hashids": "^6.0"
