--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 /public/hot
 /public/storage
 /storage/*.key
+/public/fonts
+/public/css
+/public/js
+/public/mix-manifest.json
 /vendor
 .env
 .env.backup
